# libroxml

./: .gitignore  CMakeLists.txt  License.txt  Makefile  Makefile.am  Makefile.orig  ProjectHome.md  PublicAPI.md  RoxmlLicense.md  RoxmlPerfs.md  TODO  XpathList.md  configure.ac  doxy.cfg  doxy.cfg.in  index.html  libroxml.pc  libroxml.spec  man.cfg  man.cfg.in  params.json  roxml-internal.c  roxml-internal.h  roxml-parser.c  roxml-types.h  roxml.c  roxml.h  site.in  xshell.c
data/html/: libroxml-header.html
data/scripts/: CMakeLists.txt  Lindent  make_debian_source.sh  update_version
debian/: README  README.Debian  changelog  control  copyright  docs  libroxml-dev.dirs  libroxml-dev.doc-base  libroxml-dev.install  libroxml-dev.postinst  libroxml-dev.prerm  libroxml.doc-base  libroxml.install  libroxml0.install  libroxml0.postinst  libroxml0.shlibs  postinst  rules  watch
docs/: doxy.cfg.in  man.cfg.in  roxml.1
fuse.xml/: Makefile  README  xmlfs.c
inc/: roxml-defines.h  roxml-doxy.h  roxml-internal.h  roxml-parse-engine.h  roxml-tune.h  roxml-types.h  roxml-win32-native.h  roxml.h  roxml_win32_native.h
patches/: debianization  series
src/: roxml-defines.h  roxml-doxy.h.in  roxml-internal.c  roxml-parse-engine.c  roxml-parse-engine.h  roxml-parser.c  roxml-tune.h  roxml-types.h  roxml-win32-native.h  roxml.c  roxml.h  roxml_buff.c  roxml_buff.h  roxml_commit.c  roxml_commit.h  roxml_content.c  roxml_content.h  roxml_core.c  roxml_core.h  roxml_defines.h  roxml_doxy.h.in  roxml_edit.c  roxml_edit.h  roxml_file.c  roxml_file.h  roxml_internal.h  roxml_mem.c  roxml_mem.h  roxml_nav.c  roxml_nav.h  roxml_parser.c  roxml_parser.h  roxml_shell.c  roxml_stub.c  roxml_tune.h  roxml_types.h  roxml_utils.h  roxml_win32_native.h  roxml_xpath.c  roxml_xpath.h
unittest/: CMakeLists.txt  HOWTO  Makefile  Makefile.orig  libxml2.perf  roxml.mem.c  roxml.perf.c  roxml.test.c  roxml.test.xml  roxml.test.xml.attributes  roxml.test.xml.human  roxml.test.xml.invalid  roxml.test.xml.multiple  roxml.test.xml.ns  roxml.test.xml.specnodes  roxml.test.xml.valid  roxml.test.xml.valid.comment  roxml.test.xml.whitespaces  roxml.test.xml.wrong  unittest.c  unittest.h
